# stalwart-lite

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.fdb  PUBLISHING.md  README.md  STALWART-LITE.md  install.sh
.github/workflows/: ci.yml  scorecard.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/modules/: cli.rs  database.rs
crates/common/: Cargo.toml
crates/common/src/: addresses.rs  core.rs  dns.rs  ipc.rs  lib.rs
crates/common/src/auth/: access_token.rs  mod.rs  rate_limit.rs  roles.rs
crates/common/src/config/: groupware.rs  imap.rs  inner.rs  mod.rs  network.rs  scripts.rs  spamfilter.rs  storage.rs  telemetry.rs
crates/common/src/enterprise/: alerts.rs  config.rs  license.rs  llm.rs  mod.rs  undelete.rs
crates/common/src/expr/: eval.rs  if_block.rs  mod.rs  tokenizer.rs
crates/common/src/listener/: asn.rs  blocked.rs  listen.rs  mod.rs  tls.rs
crates/common/src/manager/: backup.rs  boot.rs  config.rs  console.rs  mod.rs  reload.rs  restore.rs  webadmin.rs
crates/common/src/scripts/: mod.rs
crates/common/src/sharing/: acl.rs  mod.rs  notification.rs  resources.rs
crates/common/src/storage/: blob.rs  index.rs  state.rs
crates/common/src/telemetry/: mod.rs
crates/dav-proto/src/: lib.rs
crates/dav-proto/src/parser/: header.rs  mod.rs  property.rs  tokenizer.rs
crates/dav-proto/src/requests/: acl.rs  lockinfo.rs  mkcol.rs  mod.rs  propertyupdate.rs  propfind.rs  report.rs
crates/dav-proto/src/responses/: acl.rs  error.rs  lock.rs  mkcol.rs  mod.rs  multistatus.rs  property.rs  propstat.rs  schedule.rs
crates/dav-proto/src/schema/: property.rs  request.rs  response.rs
crates/dav/src/: lib.rs  request.rs
crates/dav/src/calendar/: copy_move.rs  delete.rs  freebusy.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  query.rs  scheduling.rs  update.rs
crates/dav/src/card/: copy_move.rs  delete.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  query.rs  update.rs
crates/dav/src/common/: acl.rs  lock.rs  mod.rs  propfind.rs  uri.rs
crates/dav/src/file/: copy_move.rs  delete.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  update.rs
crates/dav/src/principal/: matching.rs  mod.rs  propfind.rs  propsearch.rs
crates/directory/: Cargo.toml
crates/directory/src/: lib.rs
crates/directory/src/core/: cache.rs  config.rs  dispatch.rs  mod.rs  principal.rs  secret.rs
crates/email/: Cargo.toml
crates/email/src/cache/: email.rs  mailbox.rs  mod.rs
crates/email/src/identity/: index.rs
crates/email/src/mailbox/: destroy.rs  index.rs  manage.rs  mod.rs
crates/email/src/message/: copy.rs  crypto.rs  delete.rs  delivery.rs  ingest.rs  metadata.rs
crates/email/src/push/: mod.rs
crates/email/src/sieve/: delete.rs  index.rs  ingest.rs  mod.rs
crates/email/src/submission/: index.rs  mod.rs
crates/groupware/src/: lib.rs
crates/groupware/src/cache/: calcard.rs  file.rs  mod.rs
crates/groupware/src/calendar/: alarm.rs  dates.rs  expand.rs  index.rs  itip.rs  mod.rs  storage.rs
crates/groupware/src/contact/: index.rs  mod.rs  storage.rs
crates/groupware/src/file/: index.rs  mod.rs  storage.rs
crates/groupware/src/scheduling/: attendee.rs  event_cancel.rs  event_create.rs  event_update.rs  inbound.rs  itip.rs  organizer.rs  snapshot.rs
crates/http/: Cargo.toml
crates/http-proto/src/: context.rs  lib.rs  request.rs  response.rs
crates/http/src/: lib.rs  request.rs
crates/http/src/auth/: authenticate.rs
crates/http/src/autoconfig/: mod.rs
crates/http/src/form/: mod.rs
crates/http/src/management/: crypto.rs  dkim.rs  dns.rs  log.rs  mod.rs  principal.rs  queue.rs  reload.rs  report.rs  settings.rs  spam.rs  stores.rs  troubleshoot.rs
crates/imap/: Cargo.toml
crates/imap-proto/: Cargo.toml
crates/imap-proto/src/: receiver.rs
crates/imap-proto/src/parser/: acl.rs  append.rs  authenticate.rs  copy_move.rs  create.rs  delete.rs  enable.rs  fetch.rs  list.rs  login.rs  lsub.rs  mod.rs  quota.rs  rename.rs  search.rs  select.rs  sort.rs  status.rs  store.rs  subscribe.rs  thread.rs
crates/imap-proto/src/protocol/: acl.rs  capability.rs  expunge.rs  fetch.rs  list.rs  mod.rs  quota.rs  select.rs  status.rs  thread.rs
crates/imap/src/: lib.rs
crates/imap/src/core/: client.rs  mailbox.rs  message.rs  mod.rs  session.rs
crates/imap/src/op/: acl.rs  append.rs  authenticate.rs  capability.rs  (+22 more)
crates/jmap/: Cargo.toml
crates/jmap/src/: lib.rs
crates/main/: Cargo.toml  build.rs
crates/main/src/: lib.rs  main.rs
crates/managesieve/src/: lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: addressbook_v2.rs  blob.rs  calendar_v2.rs  changelog.rs  contact_v2.rs  email_v1.rs  email_v2.rs  encryption_v1.rs  encryption_v2.rs  event_v1.rs  event_v2.rs  identity_v1.rs  lib.rs  mailbox.rs  object.rs  principal_v1.rs  principal_v2.rs  push_v1.rs  push_v2.rs  queue_v1.rs  queue_v2.rs  report.rs  sieve_v1.rs  sieve_v2.rs  submission.rs  tasks_v1.rs  tasks_v2.rs  threads.rs  v011.rs  v012.rs  v013.rs  v014.rs
crates/nlp/: Cargo.toml
crates/pop3/src/: client.rs  lib.rs  mailbox.rs  session.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/smtp/: Cargo.toml
crates/smtp/src/: lib.rs
crates/spam-filter/: Cargo.toml
crates/spam-filter/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: config.rs  lib.rs
crates/trc/: Cargo.toml
crates/trc/event-macro/: Cargo.toml
crates/trc/src/: lib.rs
crates/types/src/: acl.rs  blob.rs  collection.rs  dead_property.rs  id.rs  lib.rs  special_use.rs  type_state.rs
crates/utils/: Cargo.toml
crates/utils/proc-macros/: Cargo.toml
crates/utils/src/: cache.rs  lib.rs  suffixlist.rs
tests/: Cargo.toml
tests/docker/: INSTRUCTIONS.md
tests/docker/scripts/: gen-certs.sh  init-fdb.sh
tests/resources/acme/: test_acme.sh
tests/resources/scripts/: create_test_cluster.sh  create_test_env.sh  create_test_users.sh
tests/src/directory/: mod.rs  sql.rs
tests/src/jmap/auth/: limits.rs
tests/src/smtp/inbound/: antispam.rs
tests/src/smtp/queue/: concurrent.rs  retry.rs  virtualq.rs
tests/src/webdav/: mod.rs
(+426 files in other folders)
