[package]
name = "stalwart-lite"
description = "Stalwart Mail and Collaboration Server"
authors = ["Stalwart Labs LLC <hello@stalw.art>"]
repository = "https://github.com/tschk/stalwart-lite"
homepage = "https://github.com/tschk/stalwart-lite"
keywords = ["imap", "jmap", "smtp", "email", "webdav"]
categories = ["email"]
license.workspace = true
version.workspace = true
edition = "2024"
build = "crates/main/build.rs"
exclude = ["crates/*/Cargo.toml.bak"]

[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/trc/event-macro",
    "crates/utils/proc-macros",
]

[workspace.package]
version = "0.15.5"
license = "AGPL-3.0-only"

[[bin]]
name = "stalwart"
path = "crates/main/src/main.rs"

[lib]
name = "stalwart_lib"
path = "crates/main/src/lib.rs"

[dependencies]
event_macro = { path = "crates/trc/event-macro", version = "0.15.5", package = "stalwart-lite-event-macro" }
proc_macros = { path = "crates/utils/proc-macros", version = "0.15.5", package = "stalwart-lite-proc-macros" }
sieve-rs = { version = "0.7", features = ["rkyv", "serde"] }
mail-parser = { version = "0.11", features = ["full_encoding", "rkyv"] }
mail-builder = { version = "0.4" }
mail-auth = { version = "0.7.1", features = ["rkyv", "generate", "test"] }
mail-send = { version = "0.5", default-features = false, features = ["cram-md5", "ring", "tls12"] }
smtp-proto = { version = "0.2", features = ["rkyv", "serde"] }
dns-update = { version = "0.1.5" }
calcard = { version = "0.3", features = ["rkyv"] }
calcard_v01 = { package = "calcard", version = "0.1", features = ["rkyv"] }
ahash = { version = "0.8.11", features = ["serde"] }
parking_lot = "0.12.3"
regex = "1.12"
proxy-header = { version = "0.1.0", features = ["tokio"] }
arc-swap = "1.6.0"
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2.0"
rustls-pki-types = { version = "1" }
ring = { version = "0.17" }
socket2 = "0.6"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
futures = "0.3"
rcgen = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.138"
base64 = "0.22.1"
x509-parser = "0.18"
pem = "3.0"
chrono = { version = "0.4.40", features = ["serde", "unstable-locales"] }
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
opentelemetry = { version = "0.29" }
opentelemetry_sdk = { version = "0.29" }
opentelemetry-otlp = { version = "0.29", default-features = false, features = ["reqwest-client", "http-proto", "trace", "metrics", "logs", "internal-logs", "grpc-tonic", "tls-webpki-roots", "reqwest-rustls-webpki-roots"] }
opentelemetry-semantic-conventions = { version = "0.29.0" }
prometheus = { version = "0.14", default-features = false }
imagesize = "0.14"
sha1 = "0.10.5"
sha2 = "0.10.6"
md5 = "0.8.0"
whatlang = "0.18"
idna = "1.0"
decancer = "3.0.1"
unicode-security = "0.1.0"
infer = "0.19"
bincode = { version = "2.0", features = ["serde"] }
bincode_1 = { package = "bincode", version = "1.3.3" }
hostname = "0.4.0"
zip = "6.0"
pwhash = "1.0.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
psl = "2"
aes-gcm-siv = "0.11.1"
biscuit = "0.7.0"
rsa = "0.9.2"
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
hashify = "0.2.6"
rkyv = { version = "0.8.10", features = ["little_endian"] }
indexmap = "2.7.1"
tinyvec = "1.9.0"
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }
lz4_flex = { version = "0.12", features = ["frame"], default-features = false }
rocksdb = { version = "0.24", optional = true, features = ["multi-threaded-cf"] }
foundationdb = { version = "0.9.2", features = ["embedded-fdb-include", "fdb-7_3"], optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls", "no-verify-ssl"], optional = true }
async-nats = { version = "0.44", default-features = false, features = ["server_2_10", "server_2_11", "ring"], optional = true }
azure_core = { version = "0.21.0", optional = true }
azure_storage = { version = "0.21.0", default-features = false, features = ["enable_reqwest_rustls", "hmac_rust"], optional = true }
azure_storage_blobs = { version = "0.21.0", default-features = false, features = ["enable_reqwest_rustls", "hmac_rust"], optional = true }
r2d2 = { version = "0.8.10", optional = true }
rand = "0.9.2"
rand_08 = { package = "rand", version = "0.8" }
roaring = "0.11"
rayon = { version = "1.11", optional = true }
farmhash = "1.1.5"
lru-cache = { version = "0.1.2", optional = true }
blake3 = "1.8"
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"], optional = true }
bytes = { version = "1.10", optional = true }
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls-ring", "minimal"], optional = true }
flate2 = "1.1"
redis = { version = "0.32", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure", "tls-rustls-webpki-roots", "cluster-async"], optional = true }
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
bitpacking = "0.9.2"
memchr = { version = "2.7" }
zenoh = { version = "1.3.4", default-features = false, features = ["auth_pubkey", "transport_multilink", "transport_compression", "transport_quic", "transport_tcp", "transport_tls", "transport_udp"], optional = true }
rdkafka = { version = "0.38", features = ["cmake-build"], optional = true }
rustls_021 = { package = "rustls", version = "0.21", default-features = false, features = ["dangerous_configuration"], optional = true }
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
async-trait = "0.1.68"
password-hash = "0.5.0"
argon2 = "0.5.0"
pbkdf2 = { version = "0.12.1", features = ["simple"] }
scrypt = "0.11.0"
totp-rs = { version = "5.5.1", features = ["otpauth"] }
aes = "0.8.3"
aes-gcm = "0.10.1"
cbc = { version = "0.1.2", features = ["alloc"] }
rasn = "0.10"
rasn-cms = "0.10"
rasn-pkix = "0.10"
sequoia-openpgp = { version = "2.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
async-stream = "0.3.5"
quick-xml = "0.38"
pkcs8 = { version = "0.10.2", features = ["alloc", "std"] }
rev_lines = "0.3.0"
form-data = { version = "0.6.0", features = ["sync"], default-features = false }
mime = "0.3.17"
webpki-roots = { version = "1.0" }
form_urlencoded = "1.1.0"
memory-stats = "1.2.0"
hkdf = "0.12.3"
jmap-tools = { version = "0.1", features = ["rkyv"] }
quick_cache = "0.6.9"
fast-float = "0.2.0"
nohash-hasher = "0.2.0"
rtrb = "0.3.1"
nohash = "0.2.0"
rust-stemmers = "1.2"
jieba-rs = "0.8"
maplit = "1.0.2"
unicode-general-category = "1.1.0"
unicode-normalization = "0.1.25"
percent-encoding = "2.3.1"
futures-util = "0.3.28"
tokio-tungstenite = "0.28"
tungstenite = "0.28"
num_cpus = "1.17"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.3"
libc = "0.2.126"

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
calcard = { version = "0.3", features = ["serde", "rkyv"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.40", features = ["serde"] }

[features]
default = ["rocks", "enterprise"]
sqlite = ["rusqlite", "rayon", "r2d2", "lru-cache"]
foundationdb = ["dep:foundationdb"]
foundation = ["foundationdb"]
postgres = ["tokio-postgres", "deadpool-postgres", "bytes"]
mysql = ["mysql_async"]
rocks = ["rocksdb", "rayon"]
s3 = ["rust-s3", "rustls_021"]
redis = ["dep:redis"]
nats = ["async-nats"]
azure = ["azure_core", "azure_storage", "azure_storage_blobs"]
zenoh = ["dep:zenoh"]
kafka = ["rdkafka"]
fdb-chunked-bm = []
enterprise = []
test_mode = []

[profile.dev]
opt-level = 0
debug = 1
#codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
strip = true

[profile.test]
opt-level = 0
debug = 1
#codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
