[package]
name = "stalwart-lite-proc-macros"
description = "Proc macro support for stalwart-lite"
version.workspace = true
license.workspace = true
repository = "https://github.com/tschk/stalwart-lite"
homepage = "https://github.com/tschk/stalwart-lite"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
